--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,8 +11,7 @@ source:
 
 build:
   number: 1
-  skip: true  # [not linux]
-  script: python -B setup.py install --single-version-externally-managed --record record.txt
+  skip: true  # [win]
 
 requirements:
   build:
